--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,8 @@
         </div>
     </div>
     
-    <div class="reviewes">
+    <div class="reviews_back">
+    <div class="reviews">
         <h3>ОТЗЫВЫ</h3>
         <img src="img/underline.svg" alt="Ошибочка">
         <br>
@@ -186,43 +187,50 @@
             <br><br>
             <p><b>Михаил</b>, Ген директор ПАО “Газпром”.</p>
         </span>
+        <div>
         <form action="#">
             <input type="radio" name="reviewe" value="1">
             <input type="radio" name="reviewe" value="2">
             <input type="radio" name="reviewe" value="3">
         </form>
+        </div>
+    </div>
     </div>
     
     <footer>
         <div class="contacts">
             <h3>МОИ КОНТАКТЫ</h3>
-            <span class="info" id="info__white1">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo </span>
-            <div class="contact__containers">
+            <img src="img/underline.svg" alt="Ошибочка">
+            <br>
+            <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo </p>
+            <div class="contact__containers"  id="info__white1">
                 <img src="img/geo.svg" alt="Изображение">
-                <span class="contact__white"><br>Санкт-Петербург<br>
-Невский проспект 11</span>
+                <p class="contact__white">Санкт-Петербург<br>
+Невский проспект 11</p>
             </div>
-            <div class="contact__containers">
+            <div class="contact__containers"  id="info__white2">
                 <img src="img/convert.svg" alt="Изображение">
-                <span class="contact__white"><br>info@companyname.com</span>
+                <p class="contact__white">info@companyname.com</p>
             </div>
-            <div class="contact__containers">
+            <div class="contact__containers"  id="info__white3">
                 <img src="img/phone.svg" alt="Изображение">
-                <span class="contact__white"><br>+7 999 999-99-99</span>
+                <p class="contact__white">+7 999 999-99-99</p>
             </div>
-            <h4>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</h4>
+            <span>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</span>
             <form action="#">
-                <input type="text" name="input__name" placeholder="Имя">
-                <input type="text" name="input__email" placeholder="Email">
-                <textarea name="message" id="message" cols="30" rows="10" placeholder="Ваше сообщение"></textarea>
+                <input type="text" name="input__name" placeholder="Имя" id="name">
+                <input type="text" name="input__email" placeholder="Email" id="email">
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Сообщение"></textarea>
             </form>
-            <input type="submit" value="Отправить">
-            <img src="img/fb.svg" alt="Изображение">
-            <img src="img/tw.svg" alt="Изображение">
-            <img src="img/ball.svg" alt="Изображение">
-            <img src="img/cat.svg" alt="Изображение">
-            <img src="img/inst.svg" alt="Изображение">
-            <img src="img/in.svg" alt="Изображение">
+            <br>
+            <input type="submit" value="Отправить" id="send">
+            <br>
+            <img src="img/fb.svg" alt="Изображение" class="soc" id="fb">
+            <img src="img/tw.svg" alt="Изображение" class="soc" id="tw">
+            <img src="img/ball.svg" alt="Изображение" class="soc" id="ball">
+            <img src="img/cat.svg" alt="Изображение" class="soc" id="cat">
+            <img src="img/inst.svg" alt="Изображение" class="soc" id="inst">
+            <img src="img/in.svg" alt="Изображение" class="soc" id="in">
         </div>
     </footer>
 	
